--- a/static/CSS/styles.css
+++ b/static/CSS/styles.css
@@ -153,4 +153,7 @@ main {
   }
 footer {
     background-color: #6e93c4 !important;
+    position: absolute;
+    bottom: 0 !important;
+    width: 100%;
 }
